# githelper

./: CMakeLists.txt  LICENSE  MainWindow.cpp  MainWindow.h  README.md  githelper.desktop  githelperdb  main.cpp
app/: Config.cpp  Config.h  DbProxy.cpp  DbProxy.h  Helpers.h  MainWindow.cpp  MainWindow.h
app/helpers/: Config.cpp  Config.h
app/parts/: CommandButton.h
assets/styles/: buttons.qss  labels.qss
assets/styles/dark/: app.qss  buttons.qss  labels.qss
assets/styles/light/: app.qss  buttons.qss  labels.qss
debian/: changelog  control  copyright  files  rules
